--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,7 +8,7 @@ ul#menu li {
 }
 
 #menu {
-    background-color:cadetblue; 
+    background-color:aquamarine; 
     width: fit-content;
     padding: 0;
     padding-top: 5px;
